--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="responsiv.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="type-style.css">
-    <link rel="icon" type="image/x-icon" href="/img/pokeball (1).png">
+    <link rel="icon" type="image/x-icon" href="./img/pokeball (1).png">
     <title>Pokedex</title>
 </head>
 <body onload="loadPokemon()">
